--- a/lib/Spider.css
+++ b/lib/Spider.css
@@ -1,3 +1,33 @@
+@media only screen and (min-width: 280px) and (max-width:480px){
+    #main {
+        position:relative;
+        width:480px;
+        height:600px;
+        margin:0px auto;
+        border:2px solid #33ee99;
+        background: url(../images/bg2.jpg) no-repeat center;
+    }
+    #bar {
+        position:absolute;
+        bottom:0px;
+        width:100%;
+        height:35px;
+        border-top:1px solid #33cc99;
+        background-color:rgba(255,255,255,.4);
+    }
+}
+@media only screen and (min-width: 480px) and (max-width: 10000px){
+    #main {
+    position:relative;
+    width:1200px;
+    height:600px;
+    margin:0px auto;
+    border:2px solid #33ee99;
+    background: url(../images/bg2.jpg) no-repeat center;
+    }
+
+}
+
 body {
     -moz-user-select:none;
     -webkit-user-select:none;
@@ -10,14 +40,7 @@ body {
     padding:0px;
     background-color:#eee;
 }
-#main {
-    position:relative;
-    width:1200px;
-    height:600px;
-    margin:0px auto;
-    border:2px solid #33ee99;
-    background:#333 url(../images/bg2.jpg) no-repeat center;
-}
+
 #bar {
     position:absolute;
     bottom:0px;
